<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edNombre"
            android:layout_width="@dimen/largoBarras"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margenTop"
            android:layout_gravity="center_horizontal"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/tvNombre"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/edFecha"
            android:layout_width="@dimen/largoBarras"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margenTop"
            android:layout_gravity="center_horizontal"
            android:inputType="date"
            android:hint="@string/tvFecha"
            android:importantForAutofill="no" />
        <DatePicker
            android:id="@+id/calCalendario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:datePickerMode="spinner"
            android:calendarViewShown="false"
            android:layout_gravity="center"/>
        <Button
            android:id="@+id/btDefinir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/btBotonDefinirFecha" />

        <EditText
            android:id="@+id/edNumero"
            android:layout_width="@dimen/largoBarras"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margenTop"
            android:layout_gravity="center_horizontal"
            android:inputType="phone"
            android:hint="@string/tvNumero"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/edCorreo"
            android:layout_width="@dimen/largoBarras"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margenTop"
            android:layout_gravity="center_horizontal"
            android:inputType="textEmailAddress"
            android:hint="@string/tvCorreo"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/edDescripcion"
            android:layout_width="@dimen/largoBarras"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margenTop"
            android:layout_gravity="center_horizontal"
            android:inputType="text"
            android:hint="@string/tvDescripcion"
            android:importantForAutofill="no" />


        <Button
            android:id="@+id/btSiguiente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btBotonSiguiente" />

    </LinearLayout>

</ScrollView>
